# DoggoDetector

./: Cargo.toml
src/: cv.rs  double_buffer.rs  main.rs  mock_cv.rs  web.rs
