[package]
name = "frank_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.19", features=["full"]}
# https://github.com/twistedfall/opencv-rust
opencv = "0.65.0"
# https://github.com/tensorflow/rust
tensorflow = "0.18.0"
axum = "0.5"
serde_json = "1.0"
lazy_static = "1.4.0"